<resources>

        <string name="login">Login</string>
        <string name="create_account">Create Account</string>

    <string name="app_name">HabitTracker</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="stats">Stats</string>
    <string name="habits">Habits</string>
    <string name="motd">motd</string>
    <string name="addButton">Add button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sync_header">sync</string>

    <string name="theme">Theme Setting</string>
    <string name="AppTheme">AppTheme</string>
    <string name="Selectedtheapptheme">Selected the app theme</string>
    <string name="notification_preference">Enable Notification</string>
    <string name="receiveNotification">Receive notification for important events</string>
    <string name="Language">Language</string>
    <string name="preferredLanguage">Select your preferred Language</string>
    <string name="fontSize">Font Size</string>
    <string name="selectfs">Select the app font size</string>
    <string name="enableVibration">Enable Vibration</string>
    <string name="enable">Enable vibration for certain events</string>
    <string name="appColor">App Color</string>
    <string name="selectColor">Select the primary color of app</string>


</resources>